--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,5 @@
-# user  nginx;
-
 # Define the number of worker processes; recommended value is the number of cores that are being used by your server
 # worker_processes  1;
-
-# Define the number of worker processes; recommended value is the number of cores that are being used by your server
-# error_log  /var/log/nginx/error.log warn;
-
 # Define the file that will store the process ID of the main NGINX process
 # pid        /var/run/nginx.pid;
 
@@ -13,9 +7,9 @@
 server {
     # Define the server name, IP address, and/or port of the server
     listen 80;
-    # client_max_body_size 200m;
-    # include /etc/nginx/mime.types;
-    # add_header X-Content-Type-Options nosniff;
+    client_max_body_size 200m;
+    include /etc/nginx/mime.types;
+    add_header X-Content-Type-Options nosniff;
     # Define the specified charset to the “Content-Type” response header field
     charset utf-8;
 
@@ -25,20 +19,30 @@ server {
     #                   '"$http_user_agent" "$http_x_forwarded_for"';
 
     # Define the location of the log of access attempts to NGINX
-    # access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access.log main;
+    error_log  /var/log/nginx/error.log warn;
     
     # # Define the parameters to optimize the delivery of static content
     # sendfile        on;
     # tcp_nopush     on;
     # tcp_nodelay    on;
 
-    # # Define the timeout value for keep-alive connections with the client
-    # keepalive_timeout  65;
+    keepalive_timeout  65; #Seconds
 
-    # Configure NGINX to reverse proxy HTTP requests to the upstream server (uWSGI server)
     location / {
         # Define the location of the proxy server to send the request to
-        proxy_pass http://mlflow:5000;
+        proxy_pass http://api:8000;
+
+        # Redefine the header fields that NGINX sends to the upstream server
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Configure NGINX to reverse proxy HTTP requests to the upstream server (uWSGI server)
+    location /mlflow/ {
+        # Define the location of the proxy server to send the request to
+        proxy_pass http://mlflow:5000/; 
 
         # Redefine the header fields that NGINX sends to the upstream server
         proxy_set_header Host $host;
