--- a/nginx.conf
+++ b/nginx.conf
@@ -39,14 +39,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Configure NGINX to reverse proxy HTTP requests to the upstream server (uWSGI server)
-    location /mlflow/ {
-        # Define the location of the proxy server to send the request to
-        proxy_pass http://mlflow:5000/; 
+    # # Configure NGINX to reverse proxy HTTP requests to the upstream server (uWSGI server)
+    # location /mlflow/ {
+    #     # Define the location of the proxy server to send the request to
+    #     proxy_pass http://mlflow:5000/; 
 
-        # Redefine the header fields that NGINX sends to the upstream server
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    #     # Redefine the header fields that NGINX sends to the upstream server
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # }
 }
