🚀 deploy: USE scores

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ kaggle/data/*/naive_is_in_score.csv
 kaggle/data/*/*.model/*
 kaggle/data/*/*.tokenizer
 kaggle/data/*/kerasPipeline/
+kaggle/data/*/kerasUSE/
 ## mypy cache
 *.pyc
 
