--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
   ### @TODO download output kaggle at new commit on kaggle branch (webhook?) with
   ### kaggle kernels output waechter/p5-nlp-tfidf-onevsrest -p /path/to/dest
   api:
-    restart: always
+    # restart: always
     build:
       context: ./
       dockerfile: api.dockerfile
@@ -53,7 +53,7 @@ services:
     command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
       
   nginx:
-    restart: always
+    # restart: always
     build:
       context: ./
       dockerfile: nginx.dockerfile
