--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     networks:
       - frontend
     volumes:
-      - ./kaggle/data:/kaggle_data
+      - ./kaggle/data:/data
       - ./api:/code/api # for dev so reload update on change
     command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
       
